added many changes
